--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,16 @@
   padding: 0;
   margin: 0;
 }
+
+html,
+body {
+  height: 100%;
+}
+
+/*Custom font importation*/
+@font-face {
+  font-family: "The Seasons";
+  src: url("/fonts/Fontspring-DEMO-theseasons-reg.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
