--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,16 +9,46 @@
 }
 .form {
   position: relative;
-  top: 13.88%;
-  left: 5.2%;
+  top: 16%;
+  left: 7%;
   width: 41.66%;
   height: 52%;
-  background-color: orange;
+  background: transparent;
   display: flex;
   flex-direction: column;
 }
 
-.prueba {
+.mainTitle {
+  margin-left: 2.5%;
   font-family: "The Seasons", serif;
   font-size: 4.5rem;
+  font-weight: 500;
+}
+
+.subtitle {
+  margin-left: 2.5%;
+  margin-top: 1%;
+  font-family: "The Seasons", serif;
+  font-size: 2.5rem;
+  margin-bottom: 7.5%;
+}
+
+.form Input {
+  border-radius: 2.8rem;
+  width: 79.5%;
+  height: 18%;
+  background-color: rgba(172, 205, 237, 1);
+  margin-bottom: 2.6%;
+  padding-left: 4.5%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.2rem;
+  border: none;
+  outline: none;
+}
+.formInput:hover {
+  background-color: #1e6fbd;
+}
+.formInput::placeholder {
+  color: white;
 }
