--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,48 +1,48 @@
 .mainDiv {
-  width: 100%;
-  height: 100%;
-
+  width: 100vw;
+  height: 100vh;
   background-image: url("../../public/images/loginbackground.png");
   background-size: cover;
   background-position: center;
   position: relative;
 }
+
 .form {
   position: relative;
-  top: 16%;
-  left: 7%;
-  width: 41.66%;
-  height: 52%;
+  top: 16vh;
+  left: 7vw;
+  width: 41.66vw;
+  height: 70vh;
   background: transparent;
   display: flex;
   flex-direction: column;
 }
 
 .mainTitle {
-  margin-left: 2.5%;
+  margin-left: 1vw;
   font-family: "The Seasons", serif;
-  font-size: 4.5rem;
+  font-size: 3.5vw;
   font-weight: 500;
 }
 
 .subtitle {
-  margin-left: 2.5%;
-  margin-top: 1%;
+  margin-left: 1vw;
+  margin-top: 1vh;
+  margin-bottom: 7.5vh;
   font-family: "The Seasons", serif;
-  font-size: 2.5rem;
-  margin-bottom: 7.5%;
+  font-size: 2.1vw;
 }
 
-.form Input {
-  border-radius: 2.8rem;
-  width: 79.5%;
-  height: 18%;
+.formInput {
+  border-radius: 2.8vw;
+  width: 31vw; /* 79.5% of 41.66vw ≈ 33vw, ajustado ligeramente */
+  height: 10vh; /* ajustado para mantener buena proporción */
   background-color: rgba(172, 205, 237, 1);
-  margin-bottom: 2.6%;
-  padding-left: 4.5%;
+  margin-bottom: 2.6vh;
+  padding-left: 2vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.2vw;
   border: none;
   outline: none;
 }
@@ -51,4 +51,22 @@
 }
 .formInput::placeholder {
   color: white;
+}
+
+.formButton {
+  border-radius: 2.8vw;
+  width: 31vw;
+  height: 10vh;
+  background: linear-gradient(to right, #5cd2ff, #004aad);
+  color: white;
+  margin-bottom: 2.6vh;
+  text-align: center;
+  font-family: "The Seasons", serif;
+  font-size: 2.2vw;
+  border: none;
+  outline: none;
+}
+
+.formButton:hover {
+  background-color: rgb(103, 103, 103);
 }
