--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -35,9 +35,9 @@
 
 .formInput {
   border-radius: 2.8vw;
-  width: 31vw; /* 79.5% of 41.66vw ≈ 33vw, ajustado ligeramente */
-  height: 10vh; /* ajustado para mantener buena proporción */
-  background-color: rgba(172, 205, 237, 1);
+  width: 31vw;
+  height: 10vh;
+  background-color: #a3d4f3;
   margin-bottom: 2.6vh;
   padding-left: 2vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -45,6 +45,7 @@
   font-size: 1.2vw;
   border: none;
   outline: none;
+  color: white;
 }
 .formInput:hover {
   background-color: #1e6fbd;
@@ -68,5 +69,5 @@
 }
 
 .formButton:hover {
-  background-color: rgb(103, 103, 103);
+  background: rgb(103, 103, 103);
 }
