--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,8 +40,7 @@
   background-color: #a3d4f3;
   margin-bottom: 2.6vh;
   padding-left: 2vw;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "The Seasons", serif;
   font-size: 1.2vw;
   border: none;
   outline: none;
@@ -84,8 +83,8 @@
 .registerLabel {
   font-family: "The Seasons", serif;
   font-size: 1.5vw;
-  color: black; /* Cambia el color del enlace */
-  text-decoration: none; /* Quita el subrayado */
+  color: black;
+  text-decoration: none;
 }
 .registerLabel:hover {
   color: rgb(103, 103, 103);
