--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -89,3 +89,37 @@
 .registerLabel:hover {
   color: rgb(103, 103, 103);
 }
+
+.radio-group {
+  display: flex;
+  gap: 2rem;
+  font-family: "Georgia", serif;
+  font-size: 1.25rem;
+}
+
+.radio-option {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.radio-option input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.custom-radio {
+  width: 18px;
+  height: 18px;
+  border: 3px solid #001623;
+  display: inline-block;
+  margin-right: 0.5em;
+  border-radius: 2px; /* cuadrado */
+  box-sizing: border-box;
+}
+
+.radio-option input[type="radio"]:checked + .custom-radio {
+  background-color: #001623;
+}
