--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -8,13 +8,14 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
+  padding-right: 5%;
 }
 
 .form {
   width: 45%;
   height: 100%;
-  background-color: orange;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,6 +57,12 @@
   outline: none;
   color: white;
 }
+.formInput:hover {
+  background-color: #1e6fbd;
+}
+.formInput::placeholder {
+  color: white;
+}
 
 .ageDiv {
   width: 90%;
@@ -93,26 +100,163 @@
   background-color: blue;
   width: 100%;
   height: 100%;
-}
-.credentialsDiv {
-  width: 100%;
-  height: 50%;
-  background-color: yellow;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.credentialsDiv {
+  width: 100%;
+  height: 51%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  justify-content: space-between;
 }
 
 .credentialsInput {
   border-radius: 2.8vw;
   width: 74%;
-  height: 33%;
+  height: 30%;
   background-color: #a3d4f3;
-  margin-bottom: 1%;
+
   padding-left: 2vw;
   font-family: "The Seasons", serif;
   font-size: 1.2vw;
   border: none;
   outline: none;
   color: white;
+}
+.credentialsInput::placeholder {
+  color: white;
+}
+.credentialsInput:hover {
+  background-color: #1e6fbd;
+}
+.phoneDiv {
+  margin-top: 2%;
+  width: 74%;
+  height: 15.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.phoneDiv p {
+  font-size: 1.7rem;
+  font-family: "The Seasons", serif;
+  font-weight: 200;
+}
+
+.selectCountry {
+  width: 40%;
+  appearance: none;
+  background-color: white;
+  border: 3px solid #001623;
+  border-radius: 8px;
+  padding: 0.5em 2.5em 0.5em 1em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1em;
+  color: #000;
+  cursor: pointer;
+  position: relative;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='%23001623' height='10' viewBox='0 0 20 20' width='10' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 20,0 10,10'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 0.8em center;
+  background-size: 0.65em auto;
+}
+
+.phoneInput {
+  border-radius: 2.8vw;
+  width: 55%;
+  height: 60%;
+  background-color: #a3d4f3;
+
+  padding-left: 2vw;
+  font-family: "Montserrat", serif;
+  font-size: 1.5rem;
+  border: none;
+  outline: none;
+  color: white;
+}
+
+.phoneInput:hover {
+  background-color: #1e6fbd;
+}
+.phoneInput::placeholder {
+  color: white;
+}
+
+.userRoleRow {
+  width: 100%;
+  height: 8.5%;
+  background-color: yellow;
+  display: flex;
+  justify-content: center;
+}
+.radioGroup {
+  display: flex;
+  gap: 2rem;
+  font-family: "Georgia", serif;
+  font-size: 1.25rem;
+}
+
+.radioOption {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-family: "The Seasons", serif;
+  font-size: 1.5rem;
+}
+
+.radioOption input[type="radio"] {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.customRadio {
+  width: 36px;
+  height: 36px;
+  border: 2px solid #001623;
+  display: inline-block;
+  margin-right: 0.5em;
+  border-radius: 2px;
+  box-sizing: border-box;
+  position: relative;
+  background-color: white;
+}
+
+.radioOption input[type="radio"]:checked + .customRadio {
+  background-color: #3d708d;
+}
+
+.radioOption input[type="radio"]:checked + .customRadio::after {
+  content: "✔";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -55%);
+  font-size: 1.5rem;
+  color: white;
+}
+
+.formButton {
+  border-radius: 2.8vw;
+  width: 31vw;
+  height: 9vh;
+  background: linear-gradient(to right, #5cd2ff, #004aad);
+  color: white;
+  margin-bottom: 2.6vh;
+  text-align: center;
+  font-family: "The Seasons", serif;
+  font-size: 2.2vw;
+  border: none;
+  outline: none;
+}
+
+.formButton:hover {
+  background: rgb(103, 103, 103);
 }
