--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -40,7 +40,7 @@
   background-color: #a3d4f3;
   margin-bottom: 2.6vh;
   padding-left: 2vw;
-  font-family: "The Seasons", serif;
+  font-family: "Montserrat", serif;
   font-size: 1.2vw;
   border: none;
   outline: none;
