--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -51,7 +51,7 @@
   background-color: #a3d4f3;
   margin-bottom: 2.6vh;
   padding-left: 2vw;
-  font-family: "The Seasons", serif;
+  font-family: "Montserrat", serif;
   font-size: 1.2vw;
   border: none;
   outline: none;
@@ -97,7 +97,6 @@
 }
 
 .restInformationContainer {
-  background-color: blue;
   width: 100%;
   height: 100%;
   display: flex;
@@ -122,7 +121,7 @@
   background-color: #a3d4f3;
 
   padding-left: 2vw;
-  font-family: "The Seasons", serif;
+  font-family: "Montserrat", serif;
   font-size: 1.2vw;
   border: none;
   outline: none;
@@ -135,7 +134,7 @@
   background-color: #1e6fbd;
 }
 .phoneDiv {
-  margin-top: 2%;
+  margin-top: 1%;
   width: 74%;
   height: 15.5%;
   display: flex;
@@ -191,7 +190,7 @@
 .userRoleRow {
   width: 100%;
   height: 8.5%;
-  background-color: yellow;
+
   display: flex;
   justify-content: center;
 }
@@ -218,8 +217,8 @@
 }
 
 .customRadio {
-  width: 36px;
-  height: 36px;
+  width: 28px;
+  height: 28px;
   border: 2px solid #001623;
   display: inline-block;
   margin-right: 0.5em;
@@ -239,17 +238,16 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -55%);
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   color: white;
 }
 
 .formButton {
   border-radius: 2.8vw;
   width: 31vw;
-  height: 9vh;
+  height: 8vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
-  margin-bottom: 2.6vh;
   text-align: center;
   font-family: "The Seasons", serif;
   font-size: 2.2vw;
@@ -259,4 +257,16 @@
 
 .formButton:hover {
   background: rgb(103, 103, 103);
+}
+
+.registerLabel {
+  margin-top: 1vh;
+  margin-bottom: 1%;
+  font-family: "The Seasons", serif;
+  font-size: 1.5vw;
+  color: black;
+  text-decoration: none;
+}
+.registerLabel:hover {
+  color: rgb(103, 103, 103);
 }
