--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -1,5 +1,3 @@
-/* Cosillas del front */
-
 .dashboard {
   display: flex;
   height: 100%;
@@ -81,6 +79,7 @@
 .mainContent {
   flex: 1;
   padding-left: 2.4%;
+  padding-right: 2.4%;
   background-color: #eef1f3;
 }
 
@@ -106,19 +105,23 @@
 
 /* === SECTIONS CONTAINER === */
 .sectionsWrapper {
-  background-color: #91b3cc;
+  background-color: #aac8de;
   padding: 1.75%;
   border-radius: 25px;
 }
 
 /* === INDIVIDUAL SECTIONS === */
 .section {
-  margin-bottom: 20px;
+  margin-bottom: 3vh;
+  padding-bottom: 2vh;
+  overflow-x: hidden;
 }
 
 .sectionTitle {
+  margin-left: 1.1%;
   margin-bottom: 1%;
   font-size: 1.94rem;
+  font-weight: 300;
 }
 
 .cardScroll {
