--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -2,7 +2,6 @@
   display: flex;
   height: 100%;
   width: 100%;
-
   font-family: "The Seasons", sans-serif;
 }
 
@@ -74,6 +73,7 @@
   padding-left: 7.5%;
   padding-right: 7.5%;
   font-size: 1.3rem;
+  text-decoration: none;
 }
 
 /* === MAIN === */
@@ -82,7 +82,8 @@
   min-width: 0;
   padding-left: 2.4%;
   padding-right: 2.4%;
-  background-color: #eef1f3;
+
+  overflow-y: auto;
 }
 
 /* === SEARCH === */
@@ -103,6 +104,7 @@
   outline: none;
   height: 68%;
   font-size: 1.3rem;
+  font-family: "The Seasons", serif;
 }
 
 /* === SECTIONS CONTAINER === */
@@ -118,6 +120,7 @@
   margin-bottom: 3vh;
   padding-bottom: 2vh;
   overflow-x: hidden;
+  height: 50%;
 }
 
 .sectionTitle {
@@ -134,12 +137,17 @@
   overflow-x: auto;
 
   gap: 20px;
+
   padding-bottom: 1%;
+
+  padding-left: 1.5%;
+
+  height: 50%;
 }
 .cardScroll::-webkit-scrollbar {
   border-radius: 8px;
   background-color: rgb(239, 235, 235);
-  width: 6px;
+  height: 12px;
 }
 .cardScroll::-webkit-scrollbar-thumb {
   background-color: #283f4f;
@@ -147,15 +155,21 @@
 }
 
 .card {
-  background: #fff;
-  border-radius: 20px;
-  padding: 10px;
-  width: 200px;
+  background-color: #fff;
+  border-radius: 50px;
+  padding: 1%;
+  width: 22.5%;
+  flex-shrink: 0;
+}
+.card:hover {
+  background: rgb(103, 103, 103);
+  color: white;
+  font-weight: 500;
 }
 
 .courseImage {
   width: 180px;
-  border-radius: 50%;
+  border-radius: 30px;
 }
 
 .cardTitle {
