--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -51,7 +51,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 25%;
+  height: 18%;
 }
 
 .sidebarLink {
@@ -62,6 +62,9 @@
   color: black;
   text-decoration: none;
   font-size: 1.3rem;
+}
+.sidebarLink:hover {
+  color: #1e6fbd;
 }
 
 .logout {
@@ -76,7 +79,7 @@
   text-decoration: none;
 }
 .logout:hover {
-  color: rgb(160, 89, 89);
+  color: #1e6fbd;
 }
 
 /* === MAIN === */
