--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -78,22 +78,17 @@
   font-family: "The Seasons", serif;
   font-weight: 200;
 }
-.selectAge {
+.inputDate {
   width: 25%;
   appearance: none;
   background-color: white;
   border: 3px solid #001623;
   border-radius: 8px;
-  padding: 0.5em 2.5em 0.5em 1em;
+  padding: 0.5em 1em;
   font-family: "Montserrat", sans-serif;
   font-size: 1em;
   color: #000;
   cursor: pointer;
-  position: relative;
-  background-image: url("data:image/svg+xml;utf8,<svg fill='%23001623' height='10' viewBox='0 0 20 20' width='10' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 20,0 10,10'/></svg>");
-  background-repeat: no-repeat;
-  background-position: right 0.8em center;
-  background-size: 0.65em auto;
 }
 
 .restInformationContainer {
