--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -15,7 +15,7 @@
   flex-shrink: 0;
 }
 .logoContainer {
-  padding-top: 4.5vh;
+  padding-top: 4 0.5vh;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -121,16 +121,9 @@
   justify-content: space-between;
   gap: 20px;
   padding-left: 2.5%;
+  margin-bottom: 4vh;
 }
 
-.recomendationsDiv {
-  width: 100%;
-  height: 32vh;
-  background-color: orange;
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-}
 .categoryCard {
   border-radius: 12px;
   font-size: 22px;
@@ -150,9 +143,6 @@
   background: rgb(103, 103, 103);
   color: white;
 }
-/* === SECTIONS CONTAINER === */
-
-/* === INDIVIDUAL SECTIONS === */
 
 .sectionTitle {
   margin-left: 1.1%;
@@ -161,14 +151,76 @@
   font-weight: 300;
 }
 
-.card {
-  background-color: #fff;
-  border-radius: 50px;
-  padding: 1%;
-  width: 22.5%;
-  flex-shrink: 0;
-}
 .card:hover {
   background: rgb(103, 103, 103);
   color: white;
+}
+
+.recomendationsDiv {
+  width: 100%;
+  height: 42vh;
+  background-color: #aac8de;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 35px;
+  padding-left: 1.8%;
+  padding-right: 1.8%;
+  overflow-x: auto;
+  border-radius: 30px;
+  box-sizing: border-box;
+}
+
+.recomendationsDiv::-webkit-scrollbar {
+  border-radius: 8px;
+  background-color: rgb(239, 235, 235);
+  height: 12px;
+}
+.recomendationsDiv::-webkit-scrollbar-thumb {
+  background-color: #283f4f;
+  border-radius: 8px;
+}
+
+.courseCard {
+  background-color: #fff;
+  border-radius: 50px;
+  height: 35vh;
+  width: 17vw;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 1.5%;
+  padding-right: 1.5%;
+}
+
+.courseCardImage {
+  margin-top: 2.3vh;
+  width: 100%;
+  height: 50%;
+  border-radius: 30px;
+}
+.courseTitle {
+  margin-top: 5px;
+  font-size: 1.2rem;
+}
+.courseTeacherDiv {
+  margin-top: 1vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.courseTeacherImage {
+  width: 3.2vw;
+  height: 6vh;
+}
+.courseTeacherName {
+  font-size: 1.4rem;
+}
+.courseTeacherLabel {
+  margin-left: 15px;
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
 }
