--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -15,7 +15,7 @@
   flex-shrink: 0;
 }
 .logoContainer {
-  padding-top: 4 0.5vh;
+  padding-top: 4.5vh;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -69,7 +69,7 @@
 
 .logout {
   color: red;
-  margin-top: 28vh;
+  margin-top: 32vh;
   display: flex;
   align-items: center;
   gap: 3.5%;
@@ -90,19 +90,30 @@
   padding-right: 2.4%;
 
   overflow-y: scroll;
+  background-color: #f5f5f5;
 }
 
 /* === SEARCH === */
 .searchContainer {
   margin-top: 1.8vh;
-  position: relative;
   width: 50%;
   height: 10.5%;
+  display: flex;
+  flex-direction: row;
 }
 
 .searchInput {
+  margin-left: 1vw;
+  border: none;
+  width: 100%;
+  outline: none;
+  height: 100%;
+  font-size: 1.3rem;
+  font-family: "The Seasons", serif;
+  background: transparent;
+}
+.inputRow {
   margin-left: 7.5%;
-  padding: 1.8% 1.8% 1.8% 5%;
   border-radius: 20px;
   border: 1px solid #ccc;
   width: 80%;
@@ -111,7 +122,16 @@
   height: 68%;
   font-size: 1.3rem;
   font-family: "The Seasons", serif;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
+.inputRow img {
+  margin-left: 3%;
+  width: 2.3vw;
+  height: 5vh;
+}
+
 .categoryDiv {
   width: 100%;
   height: 16vh;
@@ -126,8 +146,8 @@
 
 .categoryCard {
   border-radius: 12px;
-  font-size: 22px;
-  width: 180px;
+  font-size: 1.4rem;
+  width: 200px;
   height: 100px;
   background-color: transparent;
   display: flex;
@@ -142,6 +162,7 @@
 .categoryCard:hover {
   background: rgb(103, 103, 103);
   color: white;
+  cursor: pointer;
 }
 
 .sectionTitle {
@@ -149,11 +170,6 @@
   margin-bottom: 1%;
   font-size: 1.94rem;
   font-weight: 300;
-}
-
-.card:hover {
-  background: rgb(103, 103, 103);
-  color: white;
 }
 
 .recomendationsDiv {
@@ -167,18 +183,27 @@
   padding-left: 1.8%;
   padding-right: 1.8%;
   overflow-x: auto;
-  border-radius: 30px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   box-sizing: border-box;
 }
 
 .recomendationsDiv::-webkit-scrollbar {
   border-radius: 8px;
   background-color: rgb(239, 235, 235);
-  height: 12px;
+  height: 15px;
 }
 .recomendationsDiv::-webkit-scrollbar-thumb {
   background-color: #283f4f;
   border-radius: 8px;
+}
+.emptyDiv {
+  width: 100%;
+  height: 2vh;
+  background-color: #aac8de;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  margin-bottom: 4vh;
 }
 
 .courseCard {
@@ -192,6 +217,11 @@
   align-items: center;
   padding-left: 1.5%;
   padding-right: 1.5%;
+}
+.courseCard:hover {
+  background: rgb(103, 103, 103);
+  color: white;
+  cursor: pointer;
 }
 
 .courseCardImage {
