--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -82,10 +82,11 @@
   color: #1e6fbd;
 }
 
-/* === MAIN === */
 .mainContent {
-  flex: 1;
-  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   padding-left: 2.4%;
   padding-right: 2.4%;
 
@@ -95,15 +96,17 @@
 
 /* === SEARCH === */
 .searchContainer {
-  margin-top: 1.8vh;
-  width: 50%;
-  height: 10.5%;
+  width: 100%;
+  height: 8.5%;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  margin-bottom: 2vh;
 }
 
 .searchInput {
-  margin-left: 1vw;
+  margin-left: 0.5vw;
   border: none;
   width: 100%;
   outline: none;
@@ -112,14 +115,29 @@
   font-family: "The Seasons", serif;
   background: transparent;
 }
+
+.backToCoursesLabel {
+  margin: 0;
+  padding: 0;
+
+  font-size: 1.2rem;
+  color: #1e6fbd;
+  font-family: "Montserrat", sans-serif;
+}
+.backToCoursesLabel:hover {
+  color: #a3d4f3;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
+}
+
 .inputRow {
-  margin-left: 7.5%;
-  border-radius: 20px;
+  margin-left: 1.5%;
+  border-radius: 10px;
   border: 1px solid #ccc;
-  width: 80%;
+  width: 25%;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   outline: none;
-  height: 68%;
+  height: 100%;
   font-size: 1.3rem;
   font-family: "The Seasons", serif;
   display: flex;
@@ -129,40 +147,7 @@
 .inputRow img {
   margin-left: 3%;
   width: 2.3vw;
-  height: 5vh;
-}
-
-.categoryDiv {
-  width: 100%;
-  height: 16vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-  padding-left: 2.5%;
-  margin-bottom: 4vh;
-}
-
-.categoryCard {
-  border-radius: 12px;
-  font-size: 1.4rem;
-  width: 200px;
-  height: 100px;
-  background-color: transparent;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5),
-    -2px -2px 5px rgba(255, 255, 255, 0.8);
-  font-family: "Montserrat", sans-serif;
-}
-
-.categoryCard:hover {
-  background: rgb(103, 103, 103);
-  color: white;
-  cursor: pointer;
+  height: 4vh;
 }
 
 .sectionTitle {
@@ -172,51 +157,66 @@
   font-weight: 300;
 }
 
-.recomendationsDiv {
-  width: 100%;
-  height: 42vh;
-  background-color: #aac8de;
+.sectionHeaderName {
+  margin-top: 3.5vh;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-left: 2vw;
+}
+.father {
+  box-sizing: border-box;
+  flex-grow: 1;
+
   display: flex;
   flex-direction: row;
-  align-items: center;
-  gap: 35px;
-  padding-left: 1.8%;
-  padding-right: 1.8%;
-  overflow-x: auto;
+  margin-bottom: 1.5vh;
+  overflow-y: auto;
+}
+.recomendationsDiv {
+  flex-grow: 1;
+  background-color: #aac8de;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 30px;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+  padding-left: 2vw;
+  overflow-y: auto;
   border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
   box-sizing: border-box;
 }
 
 .recomendationsDiv::-webkit-scrollbar {
-  border-radius: 8px;
+  border-radius: 5px;
   background-color: rgb(239, 235, 235);
-  height: 15px;
+  width: 12px;
 }
 .recomendationsDiv::-webkit-scrollbar-thumb {
   background-color: #283f4f;
-  border-radius: 8px;
+  border-radius: 5px;
 }
+
 .emptyDiv {
-  width: 100%;
-  height: 2vh;
-  background-color: #aac8de;
-  border-bottom-left-radius: 30px;
+  width: 20px;
+  height: 100%;
+
+  border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
-  margin-bottom: 4vh;
+  background-color: #aac8de;
 }
 
 .courseCard {
   background-color: #fff;
   border-radius: 50px;
-  height: 35vh;
-  width: 17vw;
+  height: 25vh;
+  width: 60vw;
   flex-shrink: 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   padding-left: 1.5%;
-  padding-right: 1.5%;
 }
 .courseCard:hover {
   background: rgb(103, 103, 103);
@@ -225,17 +225,24 @@
 }
 
 .courseCardImage {
-  margin-top: 2.3vh;
-  width: 100%;
-  height: 50%;
+  width: 30%;
+  height: 80%;
   border-radius: 30px;
 }
+.courseColumnInfo {
+  height: 80%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
 .courseTitle {
-  margin-top: 5px;
-  font-size: 1.2rem;
+  margin-left: 2vw;
+  font-size: 1.6rem;
 }
 .courseTeacherDiv {
-  margin-top: 1vh;
+  margin-left: 2vw;
+
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -247,11 +254,11 @@
   border-radius: 50px;
 }
 .courseTeacherName {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 .courseTeacherLabel {
   margin-left: 15px;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
 }
