--- a/components/CourseModal.module.css
+++ b/components/CourseModal.module.css
@@ -32,7 +32,14 @@
 
 .modalCourseName {
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 2rem;
+}
+.modalCourseDescription {
+  margin-top: 2vh;
+  text-align: justify;
+  font-size: 1.1rem;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 .modalActions {
@@ -41,9 +48,9 @@
 
   display: flex;
   justify-content: space-between;
-  margin-top: 10%;
   padding-left: 5vw;
   padding-right: 5vw;
+  margin-top: 3vh;
 }
 
 .courseTeacherDiv {
