--- a/src/app/recover/page.module.css
+++ b/src/app/recover/page.module.css
@@ -1,7 +1,7 @@
 .mainDiv {
   width: 100vw;
   height: 100vh;
-  background-image: url("../../public/images/loginbackground.png");
+  background-image: url("../../../public/images/recover.png");
   background-size: cover;
   background-position: center;
   position: relative;
@@ -19,18 +19,20 @@
 }
 
 .mainTitle {
-  margin-left: 1vw;
+  margin-left: -10vw;
   font-family: "The Seasons", serif;
-  font-size: 3.5vw;
+  font-size: 3.2vw;
   font-weight: 500;
+  text-align: center;
 }
 
 .subtitle {
-  margin-left: 1vw;
-  margin-top: 1vh;
-  margin-bottom: 7.5vh;
+  margin-left: -10vw;
+  margin-top: 4vh;
+  margin-bottom: 6vh;
   font-family: "The Seasons", serif;
-  font-size: 2.1vw;
+  font-size: 1.8vw;
+  text-align: center;
 }
 
 .formInput {
@@ -85,52 +87,8 @@
   font-size: 1.5vw;
   color: black;
   text-decoration: none;
+  font-weight: bold;
 }
 .registerLabel:hover {
   color: rgb(103, 103, 103);
-}
-
-.registerLabelRecover {
-  font-family: "The Seasons", serif;
-  font-size: 1.5vw;
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
-}
-.registerLabelRecover:hover {
-  color: rgb(103, 103, 103);
-}
-
-.radio-group {
-  display: flex;
-  gap: 2rem;
-  font-family: "Georgia", serif;
-  font-size: 1.25rem;
-}
-
-.radio-option {
-  position: relative;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.radio-option input[type="radio"] {
-  opacity: 0;
-  position: absolute;
-  pointer-events: none;
-}
-
-.custom-radio {
-  width: 18px;
-  height: 18px;
-  border: 3px solid #001623;
-  display: inline-block;
-  margin-right: 0.5em;
-  border-radius: 2px; /* cuadrado */
-  box-sizing: border-box;
-}
-
-.radio-option input[type="radio"]:checked + .custom-radio {
-  background-color: #001623;
 }
