--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -49,7 +49,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 100%;
   height: 24%;
 }
@@ -169,15 +169,16 @@
 
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin-bottom: 1.5vh;
   overflow-y: auto;
 }
 .recomendationsDiv {
-  flex-grow: 1;
+  width: 90%;
   background-color: #aac8de;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   gap: 30px;
   padding-top: 3vh;
   padding-bottom: 3vh;
