--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -49,7 +49,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 100%;
   height: 24%;
 }
