Added states in search input in MyCourses page. Filter the courses based on the SearchInput value

--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -172,6 +172,7 @@
   justify-content: center;
   margin-bottom: 1.5vh;
   overflow-y: auto;
+  min-height: 100vh;
 }
 .recomendationsDiv {
   width: 90%;
