--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -89,7 +89,8 @@
   padding-left: 2.4%;
   padding-right: 2.4%;
 
-  overflow-y: scroll;
+  overflow-y: auto;
+
   background-color: #f5f5f5;
 }
 
@@ -182,7 +183,9 @@
   gap: 35px;
   padding-left: 1.8%;
   padding-right: 1.8%;
+
   overflow-x: auto;
+
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   box-sizing: border-box;
