--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -101,7 +101,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   margin-bottom: 2vh;
 }
 
