--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -96,15 +96,21 @@
 
 /* === SEARCH === */
 .searchContainer {
+  margin-top: 2vh;
   width: 100%;
   height: 8.5%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-bottom: 2vh;
 }
-
+.newRow {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .searchInput {
   margin-left: 0.5vw;
   border: none;
@@ -134,7 +140,7 @@
   margin-left: 1.5%;
   border-radius: 10px;
   border: 1px solid #ccc;
-  width: 25%;
+  width: 50%;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   outline: none;
   height: 100%;
@@ -173,6 +179,25 @@
   margin-bottom: 1.5vh;
   overflow-y: auto;
 }
+
+.goModalButton {
+  margin-left: 2vw;
+  cursor: pointer;
+  border: none;
+  width: 20vw;
+  height: 80%;
+  font-family: "The Seasons", sans-serif;
+
+  border-radius: 30px;
+  background: linear-gradient(to right, #4ac4ff, #003ca6);
+  color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-size: 1.3rem;
+}
+.goModalButton:hover {
+  background: #aac8de;
+}
+
 .recomendationsDiv {
   width: 90%;
   height: 100%;
