--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -106,9 +106,10 @@
   margin-bottom: 2vh;
 }
 .newRow {
-  width: 50%;
+  width: 60%;
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
 }
 .searchInput {
@@ -140,7 +141,7 @@
   margin-left: 1.5%;
   border-radius: 10px;
   border: 1px solid #ccc;
-  width: 50%;
+  width: 60%;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   outline: none;
   height: 100%;
