--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -4,6 +4,7 @@
   height: 100vh;
   background-color: #f5f5f5;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   overflow-y: auto;
@@ -12,12 +13,11 @@
 /* Contenedor del formulario */
 .form {
   width: 60vw;
-  height: 100vh;
+  height: 100%;
   background-color: #f5f5f5;
   padding: 3vh 4vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 /* Título principal */
@@ -28,6 +28,7 @@
   color: #001623;
   margin-top: 1vh;
   margin-bottom: 4vh;
+  text-align: center;
 }
 
 /* Etiquetas */
@@ -79,21 +80,22 @@
   width: 100%;
 
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-bottom: 2vh;
+  flex-direction: row;
+  align-items: center;
 }
 
 .uploadGroup {
   display: flex;
+  flex-direction: row;
   align-items: center;
+
   gap: 1vw;
 }
 
 .imagen_preview {
-  width: 14vw;
-  height: 16vh;
-  border-radius: 12px;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
 }
 
 /* Botón de imagen */
@@ -118,7 +120,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 2vh;
 }
 
 .lecciones_container {
@@ -160,29 +161,43 @@
 .form_actions {
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  margin-top: 2vh;
+  justify-content: center;
 }
 
 .formButton {
   border-radius: 2vw;
-  margin-top: -4vh;
-  width: 48%;
+
+  width: 60%;
   height: 7vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   text-align: center;
   font-family: "The Seasons", serif;
-  font-size: 1.5vw;
+  font-size: 1.3rem;
   border: none;
   outline: none;
   cursor: pointer;
-  margin-left: 30vh;
+  margin-left: 1vw;
+}
+
+.uploadCourseButton {
+  border-radius: 2vw;
+
+  width: 40%;
+  height: 7vh;
+  background: linear-gradient(to right, #5cd2ff, #004aad);
+  color: white;
+  text-align: center;
+  font-family: "The Seasons", serif;
+  font-size: 1.3rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 .formButtonBack {
   border-radius: 2vw;
-  width: 28%;
-  height: 12vh;
+  width: 20%;
+  height: 100%;
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   text-align: center;
@@ -191,8 +206,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-
-  margin-left: -160vh;
+  margin-left: 3vw;
 }
 .formButtonBack:hover {
   background: #1e6fbd;
@@ -211,8 +225,19 @@
 
 .inputGroup2 {
   display: flex;
-  height: 100%;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
+
   gap: 2vw;
-  margin-bottom: 2vh;
+  width: 100%;
+  height: 100%;
+
+  background-color: transparent; /* Opcional: quita color naranja */
+}
+
+.newRow {
+  width: 100%;
+  height: 50%;
+  display: flex;
 }
