--- a/src/app/dashboard/page.module.css
+++ b/src/app/dashboard/page.module.css
@@ -107,6 +107,7 @@
 /* === SEARCH === */
 .searchContainer {
   margin-top: 1.8vh;
+  padding-top: 3vh;
   width: 50%;
   height: 10.5%;
   display: flex;
@@ -136,6 +137,22 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.inputRowHide {
+  margin-left: 7.5%;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  width: 80%;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  outline: none;
+  height: 68%;
+  font-size: 1.3rem;
+  font-family: "The Seasons", serif;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  visibility: hidden;
 }
 .inputRow img {
   margin-left: 3%;
@@ -291,4 +308,18 @@
 .noCoincidencesImage {
   width: 15%;
   height: 60%;
+}
+.backToCoursesLabel {
+  padding-top: 3vh;
+  margin: 0;
+  padding: 0;
+
+  font-size: 1.2rem;
+  color: #1e6fbd;
+  font-family: "Montserrat", sans-serif;
+}
+.backToCoursesLabel:hover {
+  color: #a3d4f3;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
 }
