--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -75,14 +75,20 @@
   flex-direction: column;
 }
 
-/* Imagen de portada */
 .imagen_portada_section {
   width: 100%;
-  height: 50%;
-
+  height: 40%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.imagen_portada_section img {
+  width: 30vh;
+  height: 20vh;
+  object-fit: cover;
 }
 
 .uploadGroup {
@@ -96,9 +102,10 @@
 }
 
 .imagen_preview {
-  width: 40%;
-  height: 70%;
-  border-radius: 30px;
+  width: 32%;
+  height: 90%;
+  border-radius: 8px;
+  margin-left: 8vh;
 }
 
 /* Botón de imagen */
@@ -127,7 +134,7 @@
 
 .lecciones_container {
   width: 100%;
-  height: 18vh;
+  height: 20vh;
   padding-left: 10vh;
   max-height: 150px;
   overflow-y: auto;
@@ -171,7 +178,7 @@
 
 .formButton {
   border-radius: 2vw;
-
+  padding-top: 1vh;
   width: 30%;
   height: 5vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
@@ -187,7 +194,7 @@
 
 .uploadCourseButton {
   border-radius: 2vw;
-
+  margin-top: 2vh;
   width: 40%;
   height: 7vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
@@ -205,13 +212,14 @@
 
 .formButtonBack {
   border-radius: 2vw;
-  width: 20%;
-  height: 100%;
+  width: 12%;
+  height: 90%;
+  margin-top: -4vh;
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   text-align: center;
   font-family: "The Seasons", serif;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
   border: none;
   outline: none;
   cursor: pointer;
