--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -18,6 +18,9 @@
   padding: 3vh 4vw;
   display: flex;
   flex-direction: column;
+  background-color: white;
+  border-radius: 30px;
+  margin-top: 3vh;
 }
 
 /* Título principal */
@@ -61,6 +64,29 @@
   color: white;
   margin-bottom: 1vh;
 }
+.textAreaDescription {
+  border-radius: 2vw;
+  width: 100%;
+  height: 25vh;
+  background-color: #a3d4f3;
+  padding-left: 2vw;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.2vw;
+  border: none;
+  outline: none;
+  color: white;
+  margin-bottom: 1vh;
+  resize: none;
+}
+
+.textAreaDescription::placeholder {
+  color: white;
+}
+
+.textAreaDescription:hover {
+  background-color: #1e6fbd;
+}
+
 .credentialsInput::placeholder {
   color: white;
 }
