--- a/components/ChangePasswordModal.module.css
+++ b/components/ChangePasswordModal.module.css
@@ -16,76 +16,36 @@
   background-color: white;
   border-radius: 10px;
   width: 45%;
-  height: 70%;
+  height: 50%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 6vh;
 }
-.modalDivTeacher {
-  background-color: white;
-  border-radius: 10px;
-  width: 45%;
-  height: 60%;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 6vh;
-}
-.modalCourseImage {
-  width: 50%;
-  height: 23.3vh;
-  border-radius: 20px;
-  margin-bottom: 3vh;
-}
-
-.modalCourseName {
-  text-align: center;
-  font-size: 2rem;
-}
-.modalCourseDescription {
-  margin-top: 2vh;
-  text-align: justify;
-  font-size: 1.1rem;
-  padding-left: 15%;
-  padding-right: 15%;
-}
-
-.modalActions {
+.mainInformation {
   width: 100%;
-  height: 10%;
-
+  height: 80%;
   display: flex;
-  justify-content: space-between;
-  padding-left: 5vw;
-  padding-right: 5vw;
-  margin-top: 3vh;
-}
-
-.courseTeacherDiv {
-  width: 35%;
-  height: 20%;
-  display: flex;
-  flex-direction: row;
-
+  flex-direction: column;
   align-items: center;
 }
-.courseTeacherImage {
-  width: 4vw;
-  height: 8vh;
-  border-radius: 50px;
+
+.modalCheckImage {
+  margin-top: 1vh;
+  width: 20%;
+  height: 50%;
+  border-radius: 20px;
 }
-.courseTeacherName {
-  margin-left: 1vw;
-  font-size: 1.5rem;
+
+.modalTitleName {
+  margin-top: 3vh;
+  text-align: center;
+  font-size: 2.5rem;
 }
-.courseTeacherLabel {
-  margin-left: 2vw;
-  font-size: 1.1rem;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
+.modalReturningLabel {
+  margin-top: 1vh;
+  text-align: center;
+  font-size: 1.5vw;
 }
 
 .closeModalButton {
@@ -109,7 +69,7 @@
   cursor: pointer;
   border: none;
   width: 40%;
-  height: 100%;
+  height: 10%;
   font-family: "The Seasons", sans-serif;
 
   border-radius: 30px;
