Redefined routes again for Each Course on MyCoursesPage in case that the user is editing, or creating a new Course, now is time to send the params using UseSearchParams

--- a/src/app/dashboard/mycourses/createcourse/page.module.css
+++ b/src/app/dashboard/mycourses/createcourse/page.module.css
@@ -224,7 +224,7 @@
   background: linear-gradient(to right, #5cd2ff, #004aad);
   color: white;
   text-align: center;
-  font-family: "The Seasons", serif;
+  font-family: "Montserrat", serif;
   font-size: 1.3rem;
   border: none;
   outline: none;
