--- a/components/CourseModal.module.css
+++ b/components/CourseModal.module.css
@@ -45,12 +45,17 @@
   text-align: center;
   font-size: 2rem;
 }
+.modalCourseDescDiv {
+  width: 100%;
+  height: 25%;
+}
 .modalCourseDescription {
   margin-top: 2vh;
   text-align: justify;
   font-size: 1.1rem;
   padding-left: 15%;
   padding-right: 15%;
+  word-break: break-word;
 }
 
 .modalActions {
