Modofied courseModal CSS to be responsive in their 'p' tags. Fixed issue where description was full and modal buttons were getting smaller

--- a/src/app/dashboard/mycourses/page.module.css
+++ b/src/app/dashboard/mycourses/page.module.css
@@ -270,6 +270,7 @@
 .courseTitle {
   margin-left: 2vw;
   font-size: 1.6rem;
+  word-break: break-word;
 }
 .noCoincidencesDiv {
   background-color: transparent;
