--- a/components/CourseModal.module.css
+++ b/components/CourseModal.module.css
@@ -36,25 +36,26 @@
 }
 .modalCourseImage {
   width: 50%;
-  height: 23.3vh;
+  height: 21vh;
   border-radius: 20px;
   margin-bottom: 3vh;
 }
 
 .modalCourseName {
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.1vw;
+  word-break: break-word;
 }
 .modalCourseDescDiv {
+  margin-top: 1vh;
   width: 100%;
   height: 25%;
 }
 .modalCourseDescription {
-  margin-top: 2vh;
   text-align: justify;
-  font-size: 1.1rem;
-  padding-left: 15%;
-  padding-right: 15%;
+  font-size: 1.15vw;
+  padding-left: 10%;
+  padding-right: 10%;
   word-break: break-word;
 }
 
@@ -66,7 +67,7 @@
   justify-content: space-between;
   padding-left: 5vw;
   padding-right: 5vw;
-  margin-top: 3vh;
+  margin-top: 1vh;
 }
 
 .courseTeacherDiv {
